--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,9 +9,10 @@
 
 @layer components {
     .search-bar {
-        @apply w-0 group-hover:w-[300px] transition-all duration-300 rounded-full 
+        border: 1px solid gray;
+        /* @apply w-0 group-hover:w-[220px] transition-all duration-800 rounded-full 
         group-hover:border group-hover:border-gray-500 px-3 pt-1 
-        focus:outline-none dark:border-gray-900 group-hover:dark:bg-gray-800
+        focus:outline-none dark:border-gray-900 group-hover:dark:bg-gray-800 */
     }
 }
 
@@ -97,3 +98,7 @@
         @apply bg-gradient-to-r from-gray-300/80 to-gray-100
     }
 }
+/* *{
+    margin: 0;
+    padding: 0;
+} */
